fixed overlapping divs

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@ body {
     background-color: #f2f2f2;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 ul {
@@ -15,13 +16,21 @@ ul {
 
 a {
     text-decoration: none;
-    color: #fff;
     margin: 0 .75em;
+    color: #fff;
 }
 
 h1 {
     color: #fff;
     margin: 0;
+}
+
+h2{
+    color: #271230;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 5em;
+    margin-bottom: 2em;
+    text-decoration: underline #271230 solid;
 }
 
 li {
@@ -37,52 +46,59 @@ p {
   class/id selectors
 ==================================== */
 
-/* .header-image {
-    position: relative;
-    text-align: center;
-    color: white;
-} */
-
-.image {
-    position: absolute;
+/* .image {
     top: 0;
     left: 0;
     width: 100%;
     height: auto;
     border: 0;
     z-index: -1;
+} */
+
+.welcome-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../images/header-image-cropped5.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    position: relative;
+    color: #271230;
+}
+
+.welcome-image::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    z-index: 0;
+    background: linear-gradient(rgba(115,115,115,.75), rgba(115,115,115,0));
 }
 
 .welcome {
+    padding: 17em 0;
+}
+
+.small-welcome {
+    font-size: 2vw;
+}
+
+.large-welcome {
     font-size: 4vw;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border-bottom-style: solid;
-    border-bottom-width: 12px;
+    border-bottom-width: .15em;
     border-bottom-color: #271230;
-    z-index: -1;
 }
 
 .about-me {
+    position: relative;
     color: #271230; 
-    margin: 20% 0;
     padding: 0 3em;
-}
-
-.bio {
-    margin-top: 2em;
-}
-
-.resp-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
+    z-index: -1;
 }
 
 /* ================================= 
@@ -90,7 +106,16 @@ p {
 ==================================== */
 
 .main-header  a:hover {
-    color: #271230;
+    color: #fff;
+}
+
+.main-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    color: #fff;
+    font-size: .85em;
 }
 
 .main-nav {
@@ -104,17 +129,10 @@ p {
 }
 
 .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
     color: #271230;
     background-color: #f2f2f2;
     box-shadow: 10px 0 36px 0 rgba(0,0,0,.2);
   }
-
-.sticky + .content {
-    padding-top: 102px;
-}
 
 /* ================================= 
   Slideshow Styles
@@ -124,10 +142,20 @@ p {
 
 /* Slideshow container */
 .slideshow {
-    max-width: 1000px;
+    max-width: 800px;
     position: relative;
     margin: auto;
     padding-bottom: 2em;
+    z-index: -1;
+}
+
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 /* Hide the images by default */
@@ -204,7 +232,7 @@ p {
         flex-direction: row;
         justify-content: space-between;
         padding: 10px 16px;
-        color: #f2f2f2;
+        color: #271230;
       }
     
     .main-nav {
@@ -218,7 +246,6 @@ p {
         display: flex;
         flex-direction: row;
         padding: 0 10%;
-        margin: 15% 0;
     }
     
     .bio {
